dialog, drawer, menu, notification, tab, tooltip

--- a/digital/button.html
+++ b/digital/button.html
@@ -117,11 +117,16 @@
                                             </tr>
                                         </table>
                                     </div>
-                                    <h2 class="dont mt-40 mb-20">Don't</h2>
+                                    <hr class="my-40">
+                                    <h2 class="mt-0 mb-10">Anatomy</h2>
+                                    <p class="mt-10 mb-20">
+                                        Buttons 包含了容器及按鈕文字。
+                                    </p>
                                     <div class="bg-background">
                                         <img class="d-md-block d-none mx-auto" src="../assets/system/button-anatomy-desktop.svg" alt="">
                                         <img class="d-md-none mx-auto" src="../assets/system/button-anatomy-mobile.svg" alt="">
                                     </div>
+                                    <hr class="my-40">
                                     <h2 class="dont mt-40 mb-20">Don't</h2>
                                     <div class="bg-background">
                                         <img class="d-md-block d-none mx-auto" src="../assets/system/button-dont-desktop.svg" alt="">
