--- a/digital/text-field.html
+++ b/digital/text-field.html
@@ -33,7 +33,7 @@
                     </section>
                     <section>
                         <div class="tab">
-                            <div class="tab__nav">
+                            <div class="tab__nav tab__nav--page">
                                 <ul>
                                     <li class="active">
                                         <svg id="a" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M374.24,266.74l12.57-12.57h.01v-.02l44.34-44.33h.01l44.34-44.35h0l24.36-24.36c7.82-7.82,12.12-18.21,12.12-29.27s-4.31-21.45-12.12-29.27L429.44,12.13C421.62,4.31,411.22,0,400.17,0s-21.45,4.31-29.27,12.12l-125.64,125.64L159.98,52.48c-14.28-14.28-32.17-24.44-51.74-29.39L18.68,.46c-5.12-1.29-10.55,.2-14.28,3.94C.66,8.13-.84,13.56,.46,18.68L23.1,108.24c4.95,19.57,15.11,37.47,29.39,51.74l85.28,85.28L12.12,370.9C4.31,378.72,0,389.11,0,400.17s4.31,21.45,12.12,29.27l70.44,70.44c7.82,7.82,18.21,12.13,29.27,12.13s21.45-4.31,29.27-12.12l68.68-68.68s.02-.02,.03-.03,.02-.02,.03-.03l56.9-56.9,115.5,115.5c14.82,14.82,34.28,22.23,53.75,22.23s38.93-7.41,53.75-22.23c29.64-29.64,29.64-77.86,0-107.49l-115.5-115.5ZM52.18,100.88L35.71,35.71l65.18,16.48c14.33,3.62,27.43,11.06,37.88,21.51l11.83,11.83-65.07,65.07-11.83-11.83c-10.45-10.45-17.89-23.55-21.51-37.88Zm54.55,70.92l65.07-65.07,52.24,52.24-65.07,65.07-52.24-52.24Zm5.1,310.2c-3.04,0-5.9-1.19-8.06-3.34l-70.44-70.44c-2.15-2.15-3.34-5.01-3.34-8.06s1.18-5.91,3.34-8.06L392.11,33.34c2.15-2.15,5.02-3.34,8.06-3.34s5.9,1.19,8.06,3.34l70.44,70.44c2.15,2.15,3.34,5.01,3.34,8.06s-1.19,5.91-3.34,8.06l-13.75,13.75-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.36-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l23.58,23.58-23.14,23.14-45.76-45.76c-5.86-5.86-15.36-5.86-21.21,0-5.86,5.86-5.86,15.35,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.36-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-22.74,22.74-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0-5.86,5.86-5.86,15.36,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-23.14,23.14-45.76-45.76c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l45.76,45.76-23.14,23.14-23.58-23.58c-5.86-5.86-15.35-5.86-21.21,0s-5.86,15.36,0,21.21l23.58,23.58-13.75,13.75c-2.15,2.15-5.01,3.34-8.06,3.34h0Zm186.62-139.47s.04-.04,.06-.06,.04-.04,.06-.06l43.87-43.87,.02-.02,.02-.02,10.54-10.54,63.56,63.56-65.07,65.07-63.56-63.56,10.5-10.5Zm170.07,126c-17.94,17.94-47.13,17.94-65.07,0l-30.73-30.73,65.07-65.07,30.73,30.73c17.94,17.94,17.94,47.13,0,65.07Z"/></svg><span>Design</span>
@@ -56,7 +56,105 @@
                                     <p class="mt-10 mb-20">
                                         可以在此查看文字框的樣式及各種組合。
                                     </p>
-                                    <div class="bg-background">
+                                    <div id="app" class="col-4 col--interactive">
+                                        <div class="tab">
+                                            <div class="tab__nav">
+                                                <ul>
+                                                    <li :class="{'active': tab}" @click="tab = !tab">
+                                                        <span>Contained</span>
+                                                    </li>
+                                                    <li :class="{'active': !tab}" @click="tab = !tab">
+                                                        <span>Outline</span>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                            <i class="icon icon-right tab__nav--next"></i>
+                                            <div class="tab__content">
+                                                <div class="tab__content__pane p-20" :class="{'active': tab}">
+                                                    <div class="form__group form__group--filled"
+                                                        :class="{'form__group--hasicon': option.icon, 'form__group--error': state === 'error'}"
+                                                    >
+                                                        <label class="label form__group--defalt"
+                                                            :class="{
+                                                                'hasValue': value,
+                                                                'helper__group': option.counter && state === 'helper' || option.counter && state === 'error'
+                                                            }"
+                                                        >
+                                                            <input type="email" class="form__group__input form__group__input--default" v-model="value">
+                                                            <div class="form__group__placeholder">請輸入 e-mail</div>
+                                                            <i class="form__group__icon icon"
+                                                                :class="{'icon-eyeon': state !== 'error', 'icon-exclamation-circle': state === 'error'}"
+                                                                v-if="option.icon"
+                                                            ></i>
+                                                            <span class="form__group__help"
+                                                                :class="{'form__group__help--highlight': state === 'error'}"
+                                                                v-if="state === 'helper' || state === 'error'"
+                                                            >* 此為必填欄位</span>
+                                                            <span class="form__group__counter" v-if="option.counter">0/30</span>
+                                                        </label>
+                                                    </div>
+                                                </div>
+                                                <div class="tab__content__pane p-20" :class="{'active': !tab}"></div>
+                                            </div>
+                                        </div>
+                                        <div class="configuration">
+                                            <div class="config__title">
+                                                Configuration
+                                            </div>
+                                            <div class="config__content p-20">
+                                                <ul>
+                                                    <li class="h4 my-0">Options</li>
+                                                    <li>
+                                                        <label>
+                                                            <span class="label--check">
+                                                                <input type="checkbox" name="config_option" v-model="option.counter">
+                                                                <span class="label__check__mark"></span>
+                                                                <span class="label__check__txt">Character counter</span>
+                                                            </span>
+                                                        </label>
+                                                    </li>
+                                                    <li>
+                                                        <label>
+                                                            <span class="label--check">
+                                                                <input type="checkbox" name="config_option" v-model="option.icon">
+                                                                <span class="label__check__mark"></span>
+                                                                <span class="label__check__txt">Trailing icon</span>
+                                                            </span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                                <ul class="mt-20">
+                                                    <li class="h4 my-0">Assistive text</li>
+                                                    <li>
+                                                        <label>
+                                                            <span class="label--radio">
+                                                                <input type="radio" name="config_assistive" value="none" v-model="state">
+                                                                <span class="label__radio__mark"></span>
+                                                                <span class="label__radio__txt">None</span>
+                                                            </span>
+                                                        </label>
+                                                    </li>
+                                                    <li>
+                                                        <label>
+                                                            <span class="label--radio">
+                                                                <input type="radio" name="config_assistive" value="helper" v-model="state">
+                                                                <span class="label__radio__mark"></span>
+                                                                <span class="label__radio__txt">Helper text</span>
+                                                            </span>
+                                                        </label>
+                                                    </li>
+                                                    <li>
+                                                        <label>
+                                                            <span class="label--radio">
+                                                                <input type="radio" name="config_assistive" value="error" v-model="state">
+                                                                <span class="label__radio__mark"></span>
+                                                                <span class="label__radio__txt">Error text</span>
+                                                            </span>
+                                                        </label>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </div>
                                     </div>
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Type</h2>
@@ -208,9 +306,6 @@
 <pre>
 <code class="language-xml p-20 bg-background"></code>
 </pre>
-<script type="text/javascript">
-    hljs.initHighlightingOnLoad();
-</script>
                                 </div>
                             </div>
                         </div>
@@ -225,6 +320,7 @@
         </div>
     </footer>
     <script src="../assets/js/system.js"></script>
-    <script src="../assets/js/cw.js"></script>
+    <script src="../assets/js/cw.js" type="module"></script>
+    <script src="../assets/js/textfield.js" type="module"></script>
 </body>
 </html>
